// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render form correctly with no project data 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <input
    autoFocus={true}
    className="text-input"
    onChange={[Function]}
    placeholder="Project Name"
    type="text"
    value=""
  />
  <textarea
    className="textarea"
    onChange={[Function]}
    placeholder="Project Description"
    value=""
  />
  <div
    className="select-group"
  >
    <div
      className="select-group__item"
    >
      <h3
        className="select-group__title"
      >
        Project Manager
      </h3>
      <select
        className="select-group__select"
        id="project-manager"
        onChange={[Function]}
        value="1"
      >
        <option
          key="1"
          value="1"
        >
          Mr Test
        </option>
        <option
          key="2"
          value="2"
        >
          Mr Testy
        </option>
        <option
          key="3"
          value="3"
        >
          Mr Grumpy
        </option>
      </select>
    </div>
    <div
      className="select-group__item"
    >
      <h3
        className="select-group__title"
      >
        Project Type
      </h3>
      <select
        className="select-group__select"
        id="project-type"
        onChange={[Function]}
        value="ext"
      >
        <option
          value="int"
        >
          Internal
        </option>
        <option
          value="ext"
        >
          External
        </option>
      </select>
    </div>
  </div>
  <div>
    <button
      className="button"
    >
      Save Project
    </button>
  </div>
</form>
`;

exports[`should render form correctly with project data passed in 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <input
    autoFocus={true}
    className="text-input"
    onChange={[Function]}
    placeholder="Project Name"
    type="text"
    value="first test project"
  />
  <textarea
    className="textarea"
    onChange={[Function]}
    placeholder="Project Description"
    value="testing some great stuff"
  />
  <div
    className="select-group"
  >
    <div
      className="select-group__item"
    >
      <h3
        className="select-group__title"
      >
        Project Manager
      </h3>
      <select
        className="select-group__select"
        id="project-manager"
        onChange={[Function]}
        value="1"
      >
        <option
          key="1"
          value="1"
        >
          Mr Test
        </option>
        <option
          key="2"
          value="2"
        >
          Mr Testy
        </option>
        <option
          key="3"
          value="3"
        >
          Mr Grumpy
        </option>
      </select>
    </div>
    <div
      className="select-group__item"
    >
      <h3
        className="select-group__title"
      >
        Project Type
      </h3>
      <select
        className="select-group__select"
        id="project-type"
        onChange={[Function]}
        value="int"
      >
        <option
          value="int"
        >
          Internal
        </option>
        <option
          value="ext"
        >
          External
        </option>
      </select>
    </div>
  </div>
  <div>
    <button
      className="button"
    >
      Save Project
    </button>
  </div>
</form>
`;

exports[`should set an error for an invalid submission 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <p
    className="form__error"
  >
    Please provide a title and project description
  </p>
  <input
    autoFocus={true}
    className="text-input"
    onChange={[Function]}
    placeholder="Project Name"
    type="text"
    value=""
  />
  <textarea
    className="textarea"
    onChange={[Function]}
    placeholder="Project Description"
    value=""
  />
  <div
    className="select-group"
  >
    <div
      className="select-group__item"
    >
      <h3
        className="select-group__title"
      >
        Project Manager
      </h3>
      <select
        className="select-group__select"
        id="project-manager"
        onChange={[Function]}
        value="1"
      >
        <option
          key="1"
          value="1"
        >
          Mr Test
        </option>
        <option
          key="2"
          value="2"
        >
          Mr Testy
        </option>
        <option
          key="3"
          value="3"
        >
          Mr Grumpy
        </option>
      </select>
    </div>
    <div
      className="select-group__item"
    >
      <h3
        className="select-group__title"
      >
        Project Type
      </h3>
      <select
        className="select-group__select"
        id="project-type"
        onChange={[Function]}
        value="ext"
      >
        <option
          value="int"
        >
          Internal
        </option>
        <option
          value="ext"
        >
          External
        </option>
      </select>
    </div>
  </div>
  <div>
    <button
      className="button"
    >
      Save Project
    </button>
  </div>
</form>
`;
